<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/about_us_toolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/about_us_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/about_us_back"
                android:layout_width="@dimen/large_50"
                android:layout_height="match_parent"
                android:padding="@dimen/base"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/icon_close" />

            <TextView
                android:id="@+id/about_us_order_about_us_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:layout_gravity="center"
                android:textSize="@dimen/text_16"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/about_us_toolBarLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/medium_20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/teal_blue"
            android:textSize="@dimen/text_24"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/large_150"
            android:layout_height="@dimen/large_150"
            android:layout_marginTop="@dimen/medium_20"
            android:contentDescription="@string/about_us"
            android:src="@drawable/icon_cart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_info"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14" />

        <View
            android:id="@+id/individual_product_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_2"
            android:layout_marginTop="@dimen/medium_20"
            android:layout_marginBottom="@dimen/small_10"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/base">

            <TextView
                android:id="@+id/about_us_write_to_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base"
                android:drawablePadding="@dimen/base"
                android:text="@string/write_to_us"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16"
                app:drawableStartCompat="@drawable/icon_email" />

            <TextView
                android:id="@+id/about_us_call_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_20"
                android:drawablePadding="@dimen/base"
                android:text="@string/call_us"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16"
                app:drawableStartCompat="@drawable/icon_call" />

            <TextView
                android:id="@+id/about_us_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_20"
                android:drawablePadding="@dimen/base"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16"
                app:drawableStartCompat="@drawable/icon_policy" />

        </LinearLayout>

        <View
            android:id="@+id/individual_product_divider1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_20"
            android:drawablePadding="@dimen/base"
            android:text="@string/app_version"
            android:textSize="@dimen/text_14"
            app:drawableStartCompat="@drawable/icon_version" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_20"
            android:drawablePadding="@dimen/base"
            android:text="@string/app_company"
            android:textSize="@dimen/text_14"
            app:drawableStartCompat="@drawable/icon_copyright" />

    </LinearLayout>

</RelativeLayout>