<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StaffAddition">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/staff_addition_toolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/staff_addition_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/staff_addition_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/close" />

            <TextView
                android:id="@+id/staff_addition_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_employee"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/staff_addition_toolBarLayout"
        android:gravity="center"
        android:padding="@dimen/medium_20"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/staff_addition_full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textColor="@color/black"
                app:hintTextColor="@color/biscuit"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/staff_addition__email_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_20">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:textColor="@color/black"
                app:hintTextColor="@color/biscuit"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/staff_addition_passcode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginTop="@dimen/medium_20">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:hint="@string/password"
                app:hintTextColor="@color/biscuit"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/staff_addition_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_20"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/staff_addition_cashier_radio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cashier"/>

            <RadioButton
                android:id="@+id/staff_addition_staff_radio"
                android:layout_marginStart="@dimen/base"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/staff"/>

        </RadioGroup>

        <Button
            android:id="@+id/staff_addition_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="@dimen/text_20"
            android:layout_marginTop="@dimen/medium_20"/>

    </LinearLayout>

</RelativeLayout>