<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_stocks"
    android:layout_gravity="center"
    android:layout_margin="@dimen/base"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/base"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/card_stocks_image"
            android:layout_width="@dimen/large_100"
            android:layout_height="@dimen/large_100"
            android:padding="@dimen/base"
            android:src="@drawable/basket"
            android:contentDescription="@string/image_content_description"/>

        <TextView
            android:id="@+id/card_stocks_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base"
            android:text="@string/product_name"
            android:textSize="@dimen/text_16"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/card_stocks_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base"
            android:text="@string/price"
            android:textSize="@dimen/text_14"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>