<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderPlaced">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/order_placed_toolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/order_placed_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/order_placed_close"
                android:layout_width="@dimen/large_50"
                android:layout_height="match_parent"
                android:padding="@dimen/base"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/icon_close" />

            <TextView
                android:id="@+id/order_placed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/placed"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false"
        android:layout_below="@id/order_placed_toolBarLayout"
        android:orientation="vertical"
        android:padding="@dimen/medium_20"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_50"
            android:text="@string/order_placed_successfully"
            android:textAlignment="center"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/text_20"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/order_placed_order_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_50"
            android:text="@string/order_number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/order_placed_share_bill_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_20"
            android:text="@string/share_bill"/>

    </LinearLayout>



</RelativeLayout>