<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderFailed">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/order_failed_toolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/order_failed_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/order_failed_close"
                android:layout_width="@dimen/large_50"
                android:layout_height="match_parent"
                android:padding="@dimen/base"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/icon_close" />

            <TextView
                android:id="@+id/order_failed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/failed"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/order_failed_try_again_later"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"/>

</RelativeLayout>